src/snapshots/mst__tree__tests__equal_page_move_all_nodes_and_high_page.snap
---
source: src/tree.rs
expression: dot
---
digraph g {
	page_1:4 -> page_2:head;
	page_2 [shape=record, label="<head>Level 52|<3>·|3"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 64|<2>·|2|<4>·|4|<high_page>·"]
	page_1:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 20|<5>·|5"]

}

