src/snapshots/mst__tree__tests__greatest_key_splits_high_page.snap
---
source: src/tree.rs
expression: v.into_inner().finalise()
---
digraph g {
	page_1:12 -> page_2:head;
	page_2 [shape=record, label="<head>Level 1|<11>·|11"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 2|<10>·|10|<12>·|12"]

}

