src/snapshots/mst__tree__tests__non_root_page_split_gt.snap
---
source: src/tree.rs
expression: v.finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 6|<A>·|A|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 4|<B>·|B|<high_page>·"]
	page_2:high_page -> page_3:head [fontcolor=red color=red label="high page"];

	page_3 [shape=record, label="<head>Level 2|<C>·|C"]

}

