src/snapshots/mst__tree__tests__non_root_page_split_lt.snap
---
source: src/tree.rs
expression: v.finalise()
---
digraph g {
	page_2:B -> page_3:head;
	page_3 [shape=record, label="<head>Level 2|<A>·|A"]

	page_1:C -> page_2:head;
	page_2 [shape=record, label="<head>Level 4|<B>·|B"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 6|<C>·|C"]

}

