src/snapshots/mst__tree__tests__one.snap
---
source: src/tree.rs
expression: v.into_inner().finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 0|<key>·|key"]

}

