src/snapshots/mst__tree__tests__one_non_zero_level.snap
---
source: src/tree.rs
expression: v.into_inner().finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 4|<key>·|key"]

}

