src/snapshots/mst__tree__tests__root_split_non_zero_step_gt.snap
---
source: src/tree.rs
expression: v.finalise()
---
digraph g {
	page_1:B -> page_2:head;
	page_2 [shape=record, label="<head>Level 3|<A>·|A"]

	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 9|<B>·|B"]

}

