src/snapshots/mst__tree__tests__root_split_non_zero_step_lt.snap
---
source: src/tree.rs
expression: v.finalise()
---
digraph g {
	root [shape=diamond style=dotted];
	root -> page_1:head
	page_1 [shape=record, label="<head>Level 9|<A>·|A|<high_page>·"]
	page_1:high_page -> page_2:head [fontcolor=red color=red label="high page"];

	page_2 [shape=record, label="<head>Level 3|<B>·|B"]

}

